# gitmon

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.example.json  pre-release.md  pyproject.toml
lib/gitmon/: __init__.py  __main__.py  config.py  exceptions.py  gitmon.tcss  scanner.py  tui.py
tests/: conftest.py  test_fixtures.py
tests/unit/: test_config.py
