[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmon"
version = "0.1.0"
description = "Git Repository Monitor TUI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "textual>=0.40.0",
]

[project.scripts]
gitmon = "gitmon.__main__:main"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]
